--- a/index.html
+++ b/index.html
@@ -85,10 +85,11 @@
     <hr>
     <h2>Certificate</h2>
     <ul>
-        <li>CS50's Introduction to Computer Science - Harvard</li>
+        <li>CS50's Introduction to Computer Science - HarvardX</li>
         <br>
-        <li>Wordpress Web Development, Elementor, Design and Woocommerce.</li>
+        <li>Wordpress Web Development, Elementor, Design and Woocommerce - Udemy</li>
     </ul>
+    <br>
     
     <footer style="position: sticky; left: 0; right: 0; bottom: 0; background-color: rgb(235, 234, 234); text-align: center;">
         <p>&copy; Bright Amasunya 2024. All rights reserved</p>
