--- a/index.html
+++ b/index.html
@@ -85,13 +85,18 @@
     <hr>
     <h2>Certificate</h2>
     <ul>
-        <li>CS50's Introduction to Computer Science - HarvardX</li>
+        <li>CS50's Introduction to Computer Science - Harvard</li>
         <br>
-        <li>Wordpress Web Development, Elementor, Design and Woocommerce - Udemy</li>
+        <li>Wordpress Web Development, Elementor, Design and Woocommerce.</li>
+    </ul>
+    <hr>
+    <h2>Others</h2>
+    <ul>
+        <li><a href="./hobbies.html">Hobbies</a></li>
+        <li><a href="./contact.html">Contact me</a></li>
     </ul>
     <br>
-    
-    <footer style="position: sticky; left: 0; right: 0; bottom: 0; background-color: rgb(235, 234, 234); text-align: center;">
+    <footer style="position: -ms-page; left: 0; right: 0; bottom: 0; text-align: center;">
         <p>&copy; Bright Amasunya 2024. All rights reserved</p>
     </footer>
 
